# vexcl-experiments

./: CMakeLists.txt  dot_vs_reshape_n_reduce.cpp  matrix-assembly-cl.cpp  matrix-assembly-thrust.cpp  matrix-assembly-vexcl.cpp  slice_reductor_perf.cpp  sort-by-key-atomic.cpp  sort-by-key-boost-compute.cpp  sort-by-key-thrust.cpp  sort-by-key-thrust.cu  static_vs_dynamic_reductor.cpp  transpose.cpp  vex_sfinae.cpp
